# 51M-Linkedin-user-DB

./: .dockerignore  .env.example  .env.production.example  .gitignore  DEPLOYMENT_CHANGES_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READINESS_REPORT.md  Database_Clean.ipynb  Dockerfile  HYBRID_SETUP.md  Makefile  Procfile  QUICK_START.md  README.md  README_local_dev.md  SCALING_TO_51M_GUIDE.md  agent.md  docker-compose.yml  fly.toml  pyproject.toml  render.yaml  start_api.sh  start_duckdb_api.sh
.claude/skills/prepare-pr/: SKILL.md
CAREER/Side Projects/semantic-talent-finder/: pom.xml
CAREER/n8n/n8n-firecrawl-linkedin-post/: Cleaned_Firecrawl_Linkedin_Post.json
backend/: __init__.py  app.py  cache.py  db.py  duck.py  models.py  search.py
backend/api/: __init__.py  app.py  auth.py  auth_routes.py  database.py  duckdb_app.py  history_manager.py  history_routes.py  jwt_utils.py  models.py  nl_parser.py  rate_limit.py  search.py  user_manager.py
backend/data_pipeline/embeddings/: generate.py  generate_async.py  providers.py  retry.py
backend/data_pipeline/ingestion/: cloud_worker.py  deduplication.py  load_incremental.py  load_optimized.py  load_parquet_to_staging.py  load_to_core.py  transformers.py  validators.py
backend/data_pipeline/scripts/: reset_db.py
backend/tests/: test_phase0.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_search_history.py
data/: README.md
docs/: API_DESIGN_PROPOSAL.md  ARCHITECTURE.md  ARCHITECTURE_VISUAL.md  CODEX_HANDOFF_2025-10-22.md  CRITICAL_ISSUES_AND_DEPLOYMENT_PLAN.md  INDEX_REPORT.md  INGESTION_ARCHITECTURE.md  MIGRATION_GUIDE.md  PHASE_STATUS.md  README.md  SCALING_PLAN.md  SCHEMA_REPORT.md  SECURITY.md
docs/agents/: HANDOFF.md  README.md  agent.md
docs/architecture/: ARCHITECTURE.md  HYBRID_SETUP.md  INGESTION_ARCHITECTURE.md  NEXT_STEPS_ARCHITECTURE.md  REBUILD_SUMMARY.md
docs/archive/: PROJECT_PHASES.md  README.md
docs/database/: INDEX_REPORT.md  SCHEMA_REPORT.md
docs/deployment/: DEPLOYMENT_GUIDE.md  DEPLOYMENT_READINESS_REPORT.md  QUICK_SCALE_REFERENCE.md  SCALING_SUMMARY.md
docs/guides/: NEGATIVE_SPACES_GUIDE.md  QUICK_START.md  SECURITY.md  THEME_GUIDELINES.md
embeddings/: batch_embed.py
frontend/: README.md  RotatingText.css  RotatingText.js  ShapeBlur.js  api-docs.html  auth.js  config.js  dashboard.html  dashboard.js  github-stars.js  index.html  login.html  next.config.mjs  package-lock.json  package.json  results.html  results.js  search.js  squares-bg.js  styles.css  test-api-key.html  theme.js
frontend/app/: globals.css  home.module.css  layout.js  page.js
frontend/app/api-docs/: page.js  (+1 more)
frontend/components/: AppShell.js  AppShell.module.css  Footer.js  GitHubStars.js  Header.js  SideRays.js  SideRays.module.css  SquaresBackground.js  ThemeToggle.js
frontend/lib/: auth.js  config.js  searchHistory.js  squares-background.js  theme.js
jobs/: promote_hot.py
migrations/: 001_extensions.sql  002_staging_table.sql  003_core_schema.sql  004_indexes.sql  005_data_completeness.sql  006_optimize_filter_indexes.sql  007_add_search_vector.sql  008_users_and_api_keys.sql  009_performance_optimizations_10m.sql  010_search_history.sql
scripts/: compact_s3_partitions.py  extract_streaming.py  extract_test_data.py  extract_top_500k.py  fresh_start.sh  inspect_and_extract.py  load_single_batch.sh  migrate_old_data.sh  migrate_to_hot_schema.py  prepare_1m_dataset.py  prepare_best_10m_dataset.py  prepare_best_1m_dataset.py  run_all_tests.sh  run_api_bg.sh  run_embeddings.sh  run_migration.sh  serve_frontend_bg.sh  test_complete_setup.sh  test_frontend_backend.sh  test_pipeline.sh  test_pipeline_10k.sh  test_with_500_rows.sh
sql/: 01_extensions.sql  02_schema.sql  03_indexes.sql  04_migration_from_existing.sql  05_maintenance.sql
(+11 files in other folders)
