[tool.poetry]
name = "insight-semantic-talent-finder"
version = "0.1.0"
description = "High-performance semantic search for 51M+ LinkedIn profiles using PostgreSQL + pgvector"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "data_pipeline", from = "backend"}, {include = "api", from = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"
# Database
asyncpg = "^0.29.0"
psycopg = {extras = ["binary"], version = "^3.2.1"}
# Data Processing
pandas = "^2.2.2"
pyarrow = "^17.0.0"
# API
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
# Utilities
python-dotenv = "^1.0.1"
orjson = "^3.10.7"
tqdm = "^4.66.5"
# Optional: Redis
redis = {version = "^5.1.0", optional = true}
# Optional: OpenAI
openai = {version = "^1.51.0", optional = true}

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
# Load Testing
locust = "^2.31.0"
# Linting & Formatting
ruff = "^0.6.0"
black = "^24.8.0"
mypy = "^1.11.0"
# Type Stubs
types-redis = "^4.6.0"
pandas-stubs = "^2.2.0"

[tool.poetry.extras]
redis = ["redis"]
openai = ["openai"]
all = ["redis", "openai"]

[tool.poetry.scripts]
# Data Pipeline
reset-db = "backend.data_pipeline.scripts.reset_db:main"
load-parquet = "backend.data_pipeline.ingestion.load_parquet_to_staging:main"
load-core = "backend.data_pipeline.ingestion.load_to_core:main"
generate-embeddings = "backend.data_pipeline.embeddings.generate:main"
# API
serve = "backend.api.app:serve"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ==================== TOOL CONFIGURATIONS ====================

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "tqdm.*",
    "pyarrow.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=backend --cov-report=term-missing --cov-report=html"
testpaths = ["backend/tests"]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["backend"]
omit = [
    "backend/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
